--- a/templates/login.html
+++ b/templates/login.html
@@ -46,6 +46,16 @@
 				<p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a>.</p>
             </div>
         </section>
+		
+    <footer>
+        <section class="hero">
+            <div class="hero-content">
+                <p><br></p>
+				<h3>Positive updates from distant sources are akin to refreshing water for those yearning for it.</h>
+				<p><br>&copy; 2024 NewsHub. All rights reserved.</p>
+            </div>
+        </section>
+    </footer>
 
     <!-- My JS script -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
