--- a/static/styles.css
+++ b/static/styles.css
@@ -10,6 +10,7 @@ body {
 	display: flex;
     justify-content: space-between;
     align-items: center;
+	position: center;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -17,10 +18,9 @@ body {
 /* Header Styles */
 header {
 	background-color: #007bff;
-	padding: 10px;
+	padding: 3px;
     color: #fff;
 	text-align: center;
-	position: above;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -38,8 +38,8 @@ header {
 }
 
 .logo img {
-    max-width: 90px;
-    height: 90px;
+    max-width: 50px;
+    height: 50px;
 }
 
 
@@ -67,8 +67,21 @@ header {
 /* Main Content Styles */
 main {
     
-	position: absolute;
+	position: center;
 	
+}
+
+timeout-notification {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ff9800;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    z-index: 999;
 }
 
 .hero-content {
@@ -76,8 +89,13 @@ main {
 }
 
 .hero-content img {
-    max-width: 20%;
-    height: 20%;
+    max-width: auto;
+    height: auto;
+}
+
+.hero-content h7 {
+	font-family: Arial black;
+    font-size: 50px;
 }
 
 .features {
@@ -100,13 +118,35 @@ main {
     transform: translateY(-5px);
 }
 
+.feature img {
+    max-width: 370px;
+    height: 370px;
+}
+
+.handle img {
+    max-width: 70px;
+    height: 70px;
+}
+
 .feature h2 {
+    font-size: 35px;
+    margin-bottom: 10px;
+}
+
+.feature h3 {
+	text-align: justify;
+	text-decoration: blue;
     font-size: 24px;
     margin-bottom: 10px;
 }
 
+.feature h7 {
+    font-size: 50px;
+	font-family: Arial black;
+}
+
 .feature p {
-    font-size: 16px;
+    font-size: 25px;
     margin-bottom: 20px;
 }
 
