--- a/templates/profile.html
+++ b/templates/profile.html
@@ -47,8 +47,8 @@
 							<td>{{ current_user.address }}</td>
 						</tr>
 						<tr>
-							<td>Telephone:</td>
-							<td>{{ current_user.telephone }}</td>
+							<td>phone_number:</td>
+							<td>{{ current_user.phone_number }}</td>
 						</tr>
 						<tr>
 							<td>Gender:</td>
