--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/news">News</a></li>
                     <li><a href="/view_users">View Users</a></li>
-					<li><a href="https://github.com/dtemilade/newshub" target="_blank" rel="noopener noreferrer">
+		    			<a href="https://newshub-xbjs.onrender.com/" target="_blank" rel="noopener noreferrer">
 						<input type="submit" value="DeployedPage">
 					</a></li>
                 </ul>
@@ -101,6 +101,7 @@
                     <a href="https://github.com/dtemilade">
                         <img src="static/images/img_7.jpg" alt="Github">
                     </a>
+		    <a href="https://github.com/dtemilade/newshub" target="_blank" rel="noopener noreferrer">NewsHub Github Repository</a>
                 </div>
 			</div>
 		</section>
