--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
-    <!-- My CSS script -->
+    <!-- Including my custom CSS styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <header>
         <nav>
+            <!-- Navigation section -->
             <div class="container">
                 <div class="logo">Reset Password</div>
+                <!-- List of navigation links -->
                 <ul class="nav-links">
                     <li><a href="/">Home</a></li>
                     <li><a href="/news">News</a></li>					
@@ -19,6 +21,7 @@
             </div>
         </nav>
     </header>
+    <!-- Flash messages section -->
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <ul>
@@ -28,11 +31,13 @@
             </ul>
         {% endif %}
     {% endwith %}
-        <section class="hero">
-            <div class="hero-content">
-				<p>Please ensure you entered correct username and email provided during registeration!</p>
-            </div>
-        </section>
+    <section class="hero">
+        <!-- Hero section content -->
+        <div class="hero-content">
+            <p>Please ensure you entered correct username and email provided during registration!</p>
+        </div>
+    </section>
+    <!-- Reset password form -->
     <form action="" method="post">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br>
@@ -42,7 +47,7 @@
         <input type="password" id="password" name="password" required><br>
         <button type="submit">Reset Password</button>
     </form>
-    <!-- My JS script -->
+    <!-- Including my custom JavaScript -->
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
